--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,43 +5,67 @@
 * {
     box-sizing: border-box;
 }
-body{ 
-    background-color: #333;
+body{
+    background-color: gray;
     color: #fff;
     text-align: center;
 }
-header {
+.site-header {
     background-color: var(--highlight-color);
     margin-bottom: 15px;
-    padding: 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+main {
+    width: 90vw;
+    margin: auto;
+    background-color: #333;
 }
 h1 {
-    margin: 25px;
+    margin-top: 20px;
 }
 li {
     display:inline-flex;
-    padding: 5px 20px 5px 20px;
+    padding: 0px 20px 0px 20px;
 }
 a{
     text-decoration: none;
 }
-main {
-    padding-top: 100px;
-}
+
 section {
-    margin: 15px; 
-    height: 100vh;
+    margin: 15px;
+    padding-top: 150px;
+    height: 80vh;
 }
 .main-nav{
     margin: 25px;
 }
+.section-header{
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    padding: 10px 0 10px 0  ;
+    margin-bottom: 15px;
+}
 .hero {
-    width: 60%;
+    width: 100%;
 }
 #headshot{
-    width: 33%;
+    width: 100%;
+    margin: 20px;
 }
+#about-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#about-text p {
+    margin: 10px;
+}
+#work {
+    display: inline-grid;
+}
+    
 .preview {
-    width: 40%;
-    display: inline;
+    width: 50%;
 }
