--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,27 @@
-
+body {
+    background-color: #333;
+}
 .navbar-item {
     color: red;
     font-size: 1.5em;
-    margin: 0 5px;
-    
+    margin: 0 5px;   
 }
 
-.navbar-burger  span{
+.navbar-burger {
+    transform: scale(2,2);
+    margin-top: 10px;
+    margin-right: 10px;
+}
+.navbar-burger span{
     color: red;
-    line-height: 2em;
 }
 #welcome{
     height: 100vh;
     background-image: url('../../assets/images/glenn-carstens-peters-P1qyEf1g0HU-unsplash.jpg');
-    background-position: center;
-    background-size: cover;
+    background-position:top;
+    background-size:cover;
     background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 #logo {
     width: 240px;
@@ -32,4 +38,22 @@ footer {
     justify-content: space-evenly;
     align-items: center;
     height: 50px;
+}
+#work{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+}
+.card {
+    width: fit-content;
+    margin: 15px;
+}
+.section-header {
+    font-size: 2em;
+    width: 100%;
+    color: #ccc;
+    text-align: center;
+    padding: 10px 50px;
+    background-color: red;
 }
