--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,10 @@ body {
     background-attachment: fixed;
     background-repeat: no-repeat;
 }
+.icon {
+    padding: 5px;
+    margin: 10px; 
+}
 #logo {
     width: 240px;
     height: 88.8px;
@@ -32,6 +36,7 @@ body {
     height: 100vh;;
 }
 footer {
+    margin-top: 15px;
     background-color: #333;
     color: white;
     display: flex;
@@ -52,8 +57,14 @@ footer {
 .section-header {
     font-size: 2em;
     width: 100%;
+    margin-bottom: 15px;
     color: #ccc;
     text-align: center;
     padding: 10px 50px;
     background-color: red;
+}
+#contact {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
