--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 body {
     background-color: #333;
+    font-family: 'Lato', sans-serif;
+}
+h1, h2, h3, h4, a {
+    font-family: 'Fjalla One', sans-serif;
 }
 .navbar-item {
     color: red;
