--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,9 +90,10 @@ footer {
     background-color: black;
 }
 .card {
-    width: 80%;
+    width: 100%;
     margin: 15px;
 }
+
 .card:hover {
     border: 1px solid red;
     
@@ -142,7 +143,10 @@ i:hover::after {
     justify-content: space-between;
     background-color: #333;
 }
-
+.modal-card-body, .modal-card-header {
+    width: 80%;
+    align-self: center;
+}
 .modal-card-title {
     color: red;
 }
