--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ footer {
     background-color: black;
 }
 .card {
-    width: 100%;
+    width: 90%;
     margin: 15px;
 }
 
@@ -98,6 +98,18 @@ footer {
     border: 1px solid red;
     
 }
+.card:hover::after {
+    content: 'Click to visit';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33,33,33,0.8);
+    color: red;
+    line-height: 250px;
+    text-align: center;
+    font-size: 2em;
+} 
 .section-header {
     font-size: 2em;
     width: 100%;
@@ -142,6 +154,7 @@ i:hover::after {
     border-radius: 50%;
     align-self: center;
     transform: rotate(-25deg);
+    margin: 10px;
 }
 .modal-card-header {
     padding: 10px;
