--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,13 @@ h1, h2, h3, h4, a {
 }
 #coming-soon {
     padding: 10px;
-    background-color: black;
-    font-size: 2em;
-    margin-top: 30%;
+    background-color: rgba(0,0,0,0.7);
+    font-size: 3em;
     text-align: center;
+    position: absolute;
+    top: 60%;
+    left: 35%;
+    transform: rotate(-10deg);
 }
 #about-me {
     margin: auto;
