--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,7 @@ i:hover::after {
     margin: auto;
 }
 
-@media screen and (min-width:700px) {
+@media screen and (max-width:700px) {
     .card:nth-of-type(2) {
         width: 40%;
     }
