--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,8 @@ i:hover::after {
     margin: auto;
 }
 
-@media screen and (max-width:700px) {
+@media screen and (min-width:768px) {
+    
     .card:nth-of-type(2) {
         width: 40%;
     }
