--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,9 @@ a.navbar-item:hover {
     padding: 5px;
     margin: 10px; 
 }
+.image {
+    width: 100%;
+}
 #logo {
     width: 240px;
     height: 88.8px;
